[gd_scene load_steps=3 format=3 uid="uid://cy0psin5bbdtq"]

[ext_resource type="Texture2D" uid="uid://75q0s4tjmr8s" path="res://objects/player/sprites/Slime SHEET 2.png" id="1_1oed3"]
[ext_resource type="Script" uid="uid://b566xuo865aa" path="res://objects/virus/virus.gd" id="1_30801"]

[node name="Virus" type="Node2D" groups=["virus"]]
process_mode = 1
script = ExtResource("1_30801")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.3882353, 1, 0.827451, 1)
z_index = 1
position = Vector2(0, -6)
texture = ExtResource("1_1oed3")
flip_h = true
hframes = 8
vframes = 6
frame = 15

[node name="MoveTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3
autostart = true

[node name="ProjectileTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_projectile_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
